--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
