--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "basic-auth-connect": "*"
   },
   "devDependencies": {
     "prettier": "2.7.1"
